k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: nist-mirror
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: nist-mirror-ingress
spec:
  rules:
    - host: _REPLACEME_
      http:
        paths:
          - backend:
              service:
                name: nist-mirror-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - _REPLACEME_
      secretName: nist-mirror-ingress-cert
status:
  loadBalancer:
    ingress:
      - {}
